# making_gcp_instance_group

./: instance_group_creator.py  instance_template_creator.py  launch_job_on_gcp.py  pyproject.toml  utils.py
configs/: __init__.py
configs/infrastructure/: infrastructure_schemas.py  instance_group_creator_schemas.py  instance_template_creator_schemas.py
experiment/: simple-vm.yaml
scripts/: task_runner_startup_script.sh
